test/test_5.spl
int mian() {
  int a = ^;
  retrun 0 0;
}

int fun() {
  int 2_looooooooooooooooooooooooooong_id;
  return 0 0;
}